--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_input">Input</string>
     <string name="title_activity_results">results</string>
     <string name="title_activity_organization">Organization</string>
+    <string name="title_activity_search_spanish">searchSpanish</string>
 </resources>
