--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_results">results</string>
     <string name="title_activity_organization">Organization</string>
     <string name="title_activity_search_spanish">searchSpanish</string>
+    <string name="title_activity_organization_spanish">OrganizationSpanish</string>
 </resources>
