added the call button and it works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_organization">Organization</string>
     <string name="title_activity_search_spanish">searchSpanish</string>
     <string name="title_activity_organization_spanish">OrganizationSpanish</string>
+    <string name="title_activity_map">mapActivity</string>
 </resources>
